added part of header

--- a/ldcfood_home.html
+++ b/ldcfood_home.html
@@ -18,10 +18,40 @@
 
 <body>
     <div id="wrapper">
-      
+        <header id="header" class="bg-transparent">
+            <div class="container">
+                <div class="header-wrapper">
+                    <a href="/" class="logo"><img src="assets/images/logo.svg" width="148" hweight="257"  alt="L.D.C. FOODS"></a>
+                    <ul class="header-nav">
+                        <li><a href="#">Nos Marques</a></li>
+                        <li><a href="#">Nos Gammes</a></li>
+                        <li><a href="#">Estampille CE</a></li>
+                        <li><a href="#">Nos Engagements</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li class="has-drop">
+                            <span class="drop-opener"><i class="icon-world"></i>Fr <i class="chevron-down"></i></span>
+                            <ul class="drop">
+                                <li><a href="#">English</a></li>
+                                <li><a href="#">German</a></li>
+                                <li><a href="#">Korean</a></li>
+                                <li><a href="#">French</a></li>
+                                <li><a href="#">Swedish</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </header>
+        <div class="video-banner">
+            <div class="container">
+                <h1 class="h2">Le savoir-faire volailler 
+            <span class="h2">dédié à L’INTERNATIONAL</span></h1>
+                <a href="#" class="btn">Lancer la présentation</a>
+            </div>
+        </div>
     </div>
     <script src="assets/js/vendor.min.js" defer></script>
     <script src="assets/js/app.js" defer></script>
 </body>
 
-</html> 
+</html>
