--- a/ldcfood_home.html
+++ b/ldcfood_home.html
@@ -13,7 +13,6 @@
     <link rel="manifest" href="assets/images/favicons/manifest.json">
     <link rel="mask-icon" href="assets/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#ffffff">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700" rel="stylesheet">
 </head>
 
 <body>
@@ -22,22 +21,27 @@
             <div class="container">
                 <div class="header-wrapper">
                     <a href="/" class="logo"><img src="assets/images/logo.svg" width="148" hweight="257"  alt="L.D.C. FOODS"></a>
+                    <span class="menu-opener">
+                        <i class="burger"></i>
+                    </span>
+                    <div class="has-drop">
+                        <span class="drop-opener"><i class="icon-world"></i><span class="lang">Fr</span> <i class="chevron-down"></i></span>
+                        <ul class="drop">
+                            <li><a href="#">English</a></li>
+                            <li><a href="#">German</a></li>
+                            <li><a href="#">Korean</a></li>
+                            <li><a href="#">French</a></li>
+                            <li><a href="#">Swedish</a></li>
+                        </ul>
+                    </div>
                     <ul class="header-nav">
+                        <li class="menu-close">&times;</li>
+                        <!--  <li class="current-menu-item"><a href="#">Nos Marques</a></li> -->
                         <li><a href="#">Nos Marques</a></li>
                         <li><a href="#">Nos Gammes</a></li>
                         <li><a href="#">Estampille CE</a></li>
                         <li><a href="#">Nos Engagements</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li class="has-drop">
-                            <span class="drop-opener"><i class="icon-world"></i>Fr <i class="chevron-down"></i></span>
-                            <ul class="drop">
-                                <li><a href="#">English</a></li>
-                                <li><a href="#">German</a></li>
-                                <li><a href="#">Korean</a></li>
-                                <li><a href="#">French</a></li>
-                                <li><a href="#">Swedish</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="#" class="btn btn-contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -45,9 +49,13 @@
         <div class="video-banner">
             <div class="container">
                 <h1 class="h2">Le savoir-faire volailler 
-            <span class="h2">dédié à L’INTERNATIONAL</span></h1>
+            <span >dédié à L’INTERNATIONAL</span></h1>
                 <a href="#" class="btn">Lancer la présentation</a>
             </div>
+     <video class="video-js" muted data-setup='{"autoplay": true, "width":"auto", "height":"auto"}'>
+  <source src="//vjs.zencdn.net/v/oceans.mp4" type="video/mp4">
+  <source src="//vjs.zencdn.net/v/oceans.webm" type="video/webm">
+</video>
         </div>
     </div>
     <script src="assets/js/vendor.min.js" defer></script>
