--- a/ldcfood_home.html
+++ b/ldcfood_home.html
@@ -158,6 +158,23 @@
                             </div>
                         </a>
                     </div>
+                      <div>
+                        <a class="popup-link"  data-fancybox data-src="#manager5-video" href="javascript:;">
+                            <div class="video-box">
+                                <video src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                            <div class="descr-box">
+                                <span class="country">
+                                        <img src="assets/images/flag-france.png" alt="France">
+                                </span>
+                                <div class="title-text">
+                                    <strong class="name">Pierre Lourat</strong>
+                                    <span class="position">Export France</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
