start products page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div style="display: flex;margin:auto; background: #ccc; align-items: center;border-top-left-radius:  justify-content:center;"> 
        <ul>
          <li><a href="ldcfood_home.html">LDCFOOD_home</a></li>
+         <li><a href="ldcfood_sousgamme.html">LDCFOOD_sousgamme</a></li>
        </ul>
     </div>
     
