start filter, global add style for section-title

--- a/ldcfood_sousgamme.html
+++ b/ldcfood_sousgamme.html
@@ -54,60 +54,122 @@
         <div class="container">
             <div class="products-section-wrapper">
                 <div class="filter-holder">
-                    <div class="filter filter-top">filter-side filter-side filter-side filter-side filter-side</div>
-                    <div class="filter filter-main">filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side</div>
+                    <div class="filter filter-top">
+                        <span class="filter-title">Mes filtres</span>
+                        <div class="f-divider"></div>
+                        <ul class="selected-values-list">
+                            <li><a href="#">Poulet</a></li>
+                            <li><a href="#">Dinde</a></li>
+                        </ul> 
+                        <a href="#" class="clear-selected">Tout supprimer</a>
+                    </div>
+                    <div class="filter filter-main">filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-sidefilter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-sidefilter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-sidefilter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-sidefilter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-sidefilter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-sidefilter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-sidefilter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-sidefilter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-sidefilter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-sidefilter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-sidefilter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-sidefilter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-sidefilter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-sidefilter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side filter-side</div>
                 </div>
                 <div class="products-grid-holder">
-                    <div class="category-title">
+                    <div class="section-title">
                         <h2>POULET</h2>
                     </div>
                     <ul class="products-list">
                         <li class="list-item">
-                            <div class="img-holder">
+                            <a href="#" class="product-link">
                                 <img src="assets/images/entier.png" alt="entier">
-                            </div>
+                            </a>
                             <span class="item-name">Entier</span>
                             <a href="#" class="item-button">Favoris</a>   
                         </li>
                         <li class="list-item">
-                            <div class="img-holder">
+                            <a href="#" class="product-link">
                                 <img src="assets/images/filets.png" alt="filets">
-                            </div>
+                            </a>
                             <span class="item-name">Filets</span>
                             <a href="#" class="item-button">Favoris</a>   
                         </li>
                         <li class="list-item">
-                            <div class="img-holder">
+                            <a href="#" class="product-link">
                                 <img src="assets/images/ailes.png" alt="ailes">
-                            </div>
+                            </a>
                             <span class="item-name">Ailes</span>
                             <a href="#" class="item-button">Favoris</a>   
                         </li>
                         <li class="list-item">
-                            <div class="img-holder">
+                            <a href="#" class="product-link">
                                 <img src="assets/images/abats.png" alt="abats">
-                            </div>
+                            </a>
                             <span class="item-name">Abats</span>
                             <a href="#" class="item-button">Favoris</a>   
                         </li>
                         <li class="list-item">
-                            <div class="img-holder">
+                            <a href="#" class="product-link">
                                 <img src="assets/images/co-produit.png" alt="co-produit">
-                            </div>
+                            </a>
                             <span class="item-name">Co-produit</span>
                             <a href="#" class="item-button">Favoris</a>   
                         </li>
                         <li class="list-item">
-                            <div class="img-holder">
+                            <a href="#" class="product-link">
                                 <img src="assets/images/elabores.png" alt="elabores">
-                            </div>
+                            </a>
                             <span class="item-name">Elabores</span>
                             <a href="#" class="item-button">Favoris</a>   
                         </li>
                         <li class="list-item">
-                            <div class="img-holder">
+                            <a href="#" class="product-link">
                                 <img src="assets/images/guisses.png" alt="guisses">
-                            </div>
+                            </a>
+                            <span class="item-name">Guisses</span>
+                            <a href="#" class="item-button"></a>   
+                        </li>
+                    </ul>
+                    <div class="section-title">
+                        <h2>DINDE</h2>
+                    </div>
+                    <ul class="products-list">
+                        <li class="list-item">
+                            <a href="#" class="product-link">
+                                <img src="assets/images/entier.png" alt="entier">
+                            </a>
+                            <span class="item-name">Entier</span>
+                            <a href="#" class="item-button">Favoris</a>   
+                        </li>
+                        <li class="list-item">
+                            <a href="#" class="product-link">
+                                <img src="assets/images/filets.png" alt="filets">
+                            </a>
+                            <span class="item-name">Filets</span>
+                            <a href="#" class="item-button">Favoris</a>   
+                        </li>
+                        <li class="list-item">
+                            <a href="#" class="product-link">
+                                <img src="assets/images/ailes.png" alt="ailes">
+                            </a>
+                            <span class="item-name">Ailes</span>
+                            <a href="#" class="item-button">Favoris</a>   
+                        </li>
+                        <li class="list-item">
+                            <a href="#" class="product-link">
+                                <img src="assets/images/abats.png" alt="abats">
+                            </a>
+                            <span class="item-name">Abats</span>
+                            <a href="#" class="item-button">Favoris</a>   
+                        </li>
+                        <li class="list-item">
+                            <a href="#" class="product-link">
+                                <img src="assets/images/co-produit.png" alt="co-produit">
+                            </a>
+                            <span class="item-name">Co-produit</span>
+                            <a href="#" class="item-button">Favoris</a>   
+                        </li>
+                        <li class="list-item">
+                            <a href="#" class="product-link">
+                                <img src="assets/images/elabores.png" alt="elabores">
+                            </a>
+                            <span class="item-name">Elabores</span>
+                            <a href="#" class="item-button">Favoris</a>   
+                        </li>
+                        <li class="list-item">
+                            <a href="#" class="product-link">
+                                <img src="assets/images/guisses.png" alt="guisses">
+                            </a>
                             <span class="item-name">Guisses</span>
                             <a href="#" class="item-button"></a>   
                         </li>
@@ -116,7 +178,17 @@
             </div>
         </div>
         <div class="container">
-            Eveniet sit cum totam dolorem quae deserunt, doloribus nam. Velit laborum, voluptas suscipit impedit ipsum cupiditate deleniti deserunt odit quia ad? Voluptatem doloribus fugit, esse! Nostrum fugit fuga asperiores sed, iste, hic ad, accusantium mollitia rerum odio dicta ratione obcaecati optio aperiam voluptatem ex voluptates modi dignissimos repellendus cum repellat! Quis tenetur ipsam voluptatum unde alias eius officiis quae illo facilis a dolores repellat ad accusamus harum excepturi sapiente nemo facere sed soluta tempore, nobis impedit eligendi. Vel magni ullam recusandae voluptas voluptatem perspiciatis, assumenda necessitatibus iure numquam consequuntur fugit, sapiente autem est exercitationem. Vero recusandae, ad ullam explicabo fuga provident molestias, nobis sunt earum sequi et quasi, maxime? Sapiente placeat expedita, omnis impedit consectetur. Nemo minima ipsa obcaecati quidem molestias perferendis doloribus odio impedit veritatis mollitia cupiditate vitae placeat eaque voluptate, ullam atque excepturi temporibus voluptatem? Deserunt exercitationem, reiciendis sequi animi, eveniet eos vitae, dolorem doloribus accusamus rem ipsa quis molestias magnam nemo alias voluptate vero. Nulla pariatur unde expedita quos voluptatibus dolorem architecto explicabo ullam accusantium fugiat amet quod aut nisi adipisci cum tenetur dolor, tempore atque repellendus, iusto cumque dicta maxime sit doloribus. Magni possimus commodi quas labore veniam, ipsa itaque mollitia! Consectetur consequatur quam nihil esse quos praesentium fugit quia animi enim, nemo temporibus officia corporis voluptates aliquid consequuntur, deserunt vitae, ea possimus cupiditate recusandae.
+            Eveniet sit cum totam dolorem quae deserunt, doloribus nam. Velit laborum, voluptas suscipit impedit ipsum cupiditate deleniti deserunt odit quia ad? Voluptatem doloribus fugit, esse! Nostrum fugit fuga asperiores sed, iste, hic ad, accusantium mollitia rerum odio dicta ratione obcaecati optio aperiam voluptatem ex voluptates modi dignissimos repellendus cum repellat! Quis tenetur ipsam voluptatum unde alias eius officiis quae illo facilis a dolores repellat ad accusamus harum excepturi sapiente nemo facere sed soluta tempore, nobis impedit eligendi.
+        </div>
+    </div>
+    <div class="callback">
+        <div class="red-line">
+            <span class="quantity">3</span>
+            <span>Produits sélectionnés</span>
+        </div>
+        <div class="contact-link-field">
+            <span>Besoin d’informations ?</span>
+            <a href="#" class="contact-link">Contactez-nous</a>
         </div>
     </div>
     <script src="assets/js/vendor.min.js" defer></script>
