--- a/ldcfood_home.html
+++ b/ldcfood_home.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <img id="video-mask-image" src="assets/images/video-mask.png" alt="poolygon mask for video">
     <div id="wrapper">
         <header id="header" class="bg-transparent">
             <div class="container">
@@ -76,8 +77,10 @@
                     <div>
                         <a class="popup-link" data-fancybox data-src="#manager2-video" href="javascript:;">
                             <div class="video-box">
-                                <video src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
+                             
+                                <video src="assets/videos/video-gallery/video2.mp4" type="video/mp4">
                                 </video>
+                             
                             </div>
                             <div class="descr-box">
                                 <span class="country">
@@ -93,7 +96,7 @@
                     <div>
                         <a class="popup-link" data-fancybox data-src="#manager2-video" href="javascript:;">
                             <div class="video-box">
-                                <video src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
+                                <video src="assets/videos/video-gallery/video3.mp4" type="video/mp4">
                                 </video>
                             </div>
                             <div class="descr-box">
@@ -127,7 +130,7 @@
                     <div>
                         <a class="popup-link" data-fancybox data-src="#manager4-video" href="javascript:;">
                             <div class="video-box">
-                                <video src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
+                                <video src="assets/videos/video-gallery/video2.mp4" type="video/mp4">
                                 </video>
                             </div>
                             <div class="descr-box">
@@ -144,7 +147,7 @@
                     <div>
                         <a class="popup-link" data-fancybox data-src="#manager5-video" href="javascript:;">
                             <div class="video-box">
-                                <video src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
+                                <video src="assets/videos/video-gallery/video3.mp4" type="video/mp4">
                                 </video>
                             </div>
                             <div class="descr-box">
@@ -360,9 +363,9 @@
             </section>
         </div>
     </main>
-    <img id="video-mask-image" src="assets/images/video-mask.png" alt="poolygon mask for video">
-    <script src="assets/js/vendor.min.js" defer></script>
-    <script src="assets/js/app.js" defer></script>
+
+    <script src="assets/js/vendor.min.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 
 </html>
