products page resp in process

--- a/ldcfood_sousgamme.html
+++ b/ldcfood_sousgamme.html
@@ -116,9 +116,7 @@
                             </div>
                         </div>
                         <div class="products-grid-holder">
-                            <div class="section-title">
-                                <h2 class="h2">POULET</h2>
-                            </div>
+                            <h2 class="h2 decoration">POULET</h2>
                             <ul class="products-list">
                                 <li class="list-item">
                                     <a href="#" class="product-link">
@@ -170,9 +168,7 @@
                                     <a href="#" class="item-button"></a>   
                                 </li>
                             </ul>
-                            <div class="section-title">
-                                <h2 class="h2">DINDE</h2>
-                            </div>
+                            <h2 class="h2 decoration">DINDE</h2>
                             <ul class="products-list">
                                 <li class="list-item">
                                     <a href="#" class="product-link">
