--- a/ldcfood_home.html
+++ b/ldcfood_home.html
@@ -60,7 +60,7 @@
                     <div>
                         <a class="popup-link" data-fancybox data-src="#manager1-video" href="javascript:;">
                             <div class="video-box">
-                                <video src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
+                                <video src="assets/videos/video-gallery/video1.mp4" type="video/mp4" poster="assets/images/abats.png"   >
                                 </video>
                             </div>
                             <div class="descr-box">
@@ -78,7 +78,7 @@
                         <a class="popup-link" data-fancybox data-src="#manager2-video" href="javascript:;">
                             <div class="video-box">
                              
-                                <video src="assets/videos/video-gallery/video2.mp4" type="video/mp4">
+                                <video src="assets/videos/video-gallery/video2.mp4" type="video/mp4"  poster="assets/images/abats.png">
                                 </video>
                              
                             </div>
@@ -96,7 +96,7 @@
                     <div>
                         <a class="popup-link" data-fancybox data-src="#manager2-video" href="javascript:;">
                             <div class="video-box">
-                                <video src="assets/videos/video-gallery/video3.mp4" type="video/mp4">
+                                <video src="assets/videos/video-gallery/video3.mp4" type="video/mp4"  poster="assets/images/abats.png">
                                 </video>
                             </div>
                             <div class="descr-box">
@@ -113,7 +113,7 @@
                     <div>
                         <a class="popup-link" data-fancybox data-src="#manager3-video" href="javascript:;">
                             <div class="video-box">
-                                <video src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
+                                <video src="assets/videos/video-gallery/video1.mp4" type="video/mp4"  poster="assets/images/abats.png">
                                 </video>
                             </div>
                             <div class="descr-box">
@@ -130,7 +130,7 @@
                     <div>
                         <a class="popup-link" data-fancybox data-src="#manager4-video" href="javascript:;">
                             <div class="video-box">
-                                <video src="assets/videos/video-gallery/video2.mp4" type="video/mp4">
+                                <video src="assets/videos/video-gallery/video2.mp4" type="video/mp4"  poster="assets/images/abats.png">
                                 </video>
                             </div>
                             <div class="descr-box">
@@ -147,7 +147,7 @@
                     <div>
                         <a class="popup-link" data-fancybox data-src="#manager5-video" href="javascript:;">
                             <div class="video-box">
-                                <video src="assets/videos/video-gallery/video3.mp4" type="video/mp4">
+                                <video src="assets/videos/video-gallery/video3.mp4" type="video/mp4"  poster="assets/images/abats.png">
                                 </video>
                             </div>
                             <div class="descr-box">
@@ -164,7 +164,8 @@
                     <div>
                         <a class="popup-link" data-fancybox data-src="#manager5-video" href="javascript:;">
                             <div class="video-box">
-                                <video src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
+                                <video  poster="assets/images/abats.png" >
+                                <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">    
                                 </video>
                             </div>
                             <div class="descr-box">
@@ -218,7 +219,9 @@
                 <div class="section-title">
                     <h2 class="h2">NOS GAMMES</h2>
                 </div>
+                <div class="text-holder">  
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+                 </div>
                 <div class="products-box">
                     <div class="box-col">
                         <div class="col-head">
