add some functionality for products page

--- a/ldcfood_sousgamme.html
+++ b/ldcfood_sousgamme.html
@@ -238,6 +238,7 @@
             <span>Besoin d’informations ?</span>
             <a href="#" class="contact-link">Contactez-nous</a>
         </div>
+        <span class="m-close">X</span>
     </div>
     <script src="assets/js/vendor.min.js" defer></script>
     <script src="assets/js/app.js" defer></script>
