fixed poster css property

--- a/ldcfood_home.html
+++ b/ldcfood_home.html
@@ -60,7 +60,7 @@
                     <div>
                         <a class="popup-link" data-fancybox data-src="#manager1-video" href="javascript:;">
                             <div class="video-box">
-                                <video src="assets/videos/video-gallery/video1.mp4" type="video/mp4" poster="assets/images/abats.png"   >
+                                <video src="assets/videos/video-gallery/video1.mp4" type="video/mp4" poster="assets/videos/video-gallery/poster1.png"   >
                                 </video>
                             </div>
                             <div class="descr-box">
@@ -130,7 +130,8 @@
                     <div>
                         <a class="popup-link" data-fancybox data-src="#manager4-video" href="javascript:;">
                             <div class="video-box">
-                                <video src="assets/videos/video-gallery/video2.mp4" type="video/mp4"  poster="assets/images/abats.png">
+                                <video  poster="assets/images/abats.png">
+                                <source src="assets/videos/video-gallery/video2.mp4" type="video/mp4" >
                                 </video>
                             </div>
                             <div class="descr-box">
