--- a/ldcfood_sousgamme.html
+++ b/ldcfood_sousgamme.html
@@ -20,7 +20,7 @@
         <header id="header">
             <div class="container">
                 <div class="header-wrapper">
-                    <a href="/" class="logo"><img src="assets/images/logo.svg" width="148" hweight="257"  alt="L.D.C. FOODS"></a>
+                    <a href="/" class="logo"><img src="assets/images/logo.svg" width="148" height="257"  alt="L.D.C. FOODS"></a>
                     <span class="menu-opener">
                         <i class="burger"></i>
                     </span>
@@ -57,62 +57,121 @@
                     <div class="products-section-wrapper">
                         <span class="m-filter-opener">FILTER</span>
                         <div class="filter-holder">
-                            <div class="filter filter-top">
-                                <div class="nst-component">
-                                    <span class="filter-title nst-toggle">Mes filtres</span>
-                                    <div class="nst-content">
-                                        <div>
-                                            <div class="f-divider"></div>
-                                            <ul class="selected-attributes-list">
-                                                <li><a href="#">Poulet</a></li>
-                                                <li><a href="#">Dinde</a></li>
-                                            </ul> 
-                                            <a href="#" class="clear-selected">Tout supprimer</a>
+                            <div class="m-filter-data">Filter</div>
+                            <div class="m-filter-wrapper">
+                                <div class="filter filter-top">
+                                    <div class="nst-component">
+                                        <span class="filter-title nst-toggle">Mes filtres</span>
+                                        <div class="nst-content">
+                                            <div>
+                                                <div class="f-divider"></div>
+                                                <ul class="selected-attributes-list">
+                                                    <li><a href="#">Poulet</a></li>
+                                                    <li><a href="#">Dinde</a></li>
+                                                </ul> 
+                                                <a href="#" class="clear-selected">Tout supprimer</a>
+                                            </div>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="filter filter-main">
+                                    <div class="nst-component">
+                                        <span class="filter-title nst-toggle">Gamme principale</span>
+                                        <div class="nst-content">
+                                            <div>
+                                                <ul class="f-attribute-list">
+                                                    <li><a href="#" class="f-attribute">Caille</a></li>
+                                                    <li><a href="#" class="f-attribute">Canard</a></li>
+                                                    <li><a href="#" class="f-attribute">Caneton</a></li>
+                                                    <li><a href="#" class="f-attribute">Chapon</a></li>
+                                                    <li><a href="#" class="f-attribute">Lapin</a></li>
+                                                    <li><a href="#" class="f-attribute">Oie</a></li>
+                                                    <li><a href="#" class="f-attribute">Pintade</a></li>
+                                                    <li class="selected"><a href="#" class="f-attribute">Poulet</a></li>
+                                                    <li><a href="#" class="f-attribute">Chevreau</a></li>
+                                                    <li><a href="#" class="f-attribute">Coq</a></li>
+                                                    <li><a href="#" class="f-attribute">Jeune Coq</a></li>
+                                                    <li class="selected"><a href="#" class="f-attribute">Dinde</a></li>
+                                                    <li><a href="#" class="f-attribute">Dindon</a></li>
+                                                    <li><a href="#" class="f-attribute">Poule</a></li>
+                                                    <li><a href="#" class="f-attribute">Viandes, légumes et produits
+                                                    laitierst</a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="f-divider"></div>
+                                    <div class="nst-component">
+                                        <span class="filter-title nst-toggle">Conditionnement</span>
+                                        <div class="nst-content">
+                                            <div>
+                                                <ul class="f-attribute-list">
+                                                    <li><a href="#" class="f-attribute">Vrac</a></li>
+                                                    <li><a href="#" class="f-attribute">Sachet</a></li>
+                                                    <li><a href="#" class="f-attribute">Barquette</a></li>
+                                                    <li><a href="#" class="f-attribute">Conserve</a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="f-divider"></div>
+                                    <div class="nst-component">
+                                        <span class="filter-title nst-toggle">Gamme élaborée</span>
+                                        <div class="nst-content">
+                                            <div>
+                                                <ul class="f-attribute-list">
+                                                    <li><a href="#" class="f-attribute">Charcuterie</a></li>
+                                                    <li><a href="#" class="f-attribute">Panés</a></li>
+                                                    <li><a href="#" class="f-attribute">Traiteur</a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="f-divider"></div>
+                                    <div class="nst-component">
+                                        <span class="filter-title nst-toggle">Spécifique</span>
+                                        <div class="nst-content">
+                                            <div>
+                                                <ul class="f-attribute-list">
+                                                    <li><a href="#" class="f-attribute">Classique</a></li>
+                                                    <li><a href="#" class="f-attribute">Prémium</a></li>
+                                                    <li><a href="#" class="f-attribute">Nature & respect</a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="f-divider"></div>
+                                    <div class="nst-component">
+                                        <span class="filter-title nst-toggle">Conservation</span>
+                                        <div class="nst-content">
+                                            <div>
+                                                <ul class="f-attribute-list">
+                                                    <li><a href="#" class="f-attribute">Congelé</a></li>
+                                                    <li><a href="#" class="f-attribute">Frais</a></li>
+                                                    <li><a href="#" class="f-attribute">Temperature ambiante</a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="f-divider"></div>
+                                    <div class="nst-component">
+                                        <span class="filter-title nst-toggle">Certification</span>
+                                        <div class="nst-content">
+                                            <div>
+                                                <ul class="f-attribute-list">
+                                                    <li><a href="#" class="f-attribute">Halal</a></li>
+                                                    <li><a href="#" class="f-attribute">BIO</a></li>
+                                                    <li><a href="#" class="f-attribute">Label Rouge</a></li>
+                                                    <li><a href="#" class="f-attribute">Bleu Blanc Coeur</a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="f-divider"></div>
                                 </div>
                             </div>
-                            <div class="filter filter-main">
-                                <div class="nst-component">
-                                    <span class="filter-title nst-toggle">Gamme principale</span>
-                                    <div class="nst-content">
-                                        <div>
-                                            <ul class="f-attribute-list">
-                                                <li><a href="#" class="f-attribute">Caille</a></li>
-                                                <li><a href="#" class="f-attribute">Canard</a></li>
-                                                <li><a href="#" class="f-attribute">Caneton</a></li>
-                                                <li><a href="#" class="f-attribute">Chapon</a></li>
-                                                <li><a href="#" class="f-attribute">Lapin</a></li>
-                                                <li><a href="#" class="f-attribute">Oie</a></li>
-                                                <li><a href="#" class="f-attribute">Pintade</a></li>
-                                                <li class="selected"><a href="#" class="f-attribute">Poulet</a></li>
-                                                <li><a href="#" class="f-attribute">Chevreau</a></li>
-                                                <li><a href="#" class="f-attribute">Coq</a></li>
-                                                <li><a href="#" class="f-attribute">Jeune Coq</a></li>
-                                                <li class="selected"><a href="#" class="f-attribute">Dinde</a></li>
-                                                <li><a href="#" class="f-attribute">Dindon</a></li>
-                                                <li><a href="#" class="f-attribute">Poule</a></li>
-                                                <li><a href="#" class="f-attribute">Viandes, légumes et produits
-                                                laitierst</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="f-divider"></div>
-                                <div class="nst-component">
-                                    <span class="filter-title nst-toggle">Conditionnement</span>
-                                    <div class="nst-content">
-                                        <div>
-                                            <ul class="f-attribute-list">
-                                                <li><a href="#" class="f-attribute">Vrac</a></li>
-                                                <li><a href="#" class="f-attribute">Sachet</a></li>
-                                                <li><a href="#" class="f-attribute">Barquette</a></li>
-                                                <li><a href="#" class="f-attribute">Conserve</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="f-divider"></div>
+                            <div class="m-filter-bottom">
+                                <a href="#" class="btn">VALIDER</a>
                             </div>
                         </div>
                         <div class="products-grid-holder">
@@ -236,10 +295,11 @@
         </div>
         <div class="contact-link-field">
             <span>Besoin d’informations ?</span>
-            <a href="#" class="contact-link">Contactez-nous</a>
+            <a href="#" class="btn btn-thin">Contactez-nous</a>
         </div>
         <span class="m-close">X</span>
     </div>
+    <div class="mask"></div>
     <script src="assets/js/vendor.min.js" defer></script>
     <script src="assets/js/app.js" defer></script>
 </body>
